--- a/Alura/Projeto saas/scss/style.scss
+++ b/Alura/Projeto saas/scss/style.scss
@@ -1,74 +1,71 @@
+/// Estas variaveis se referem as cores principais do nosso blog
 $purple: #a050be;
 $light-grey: #eaeaeb;
 $dark-grey: #464646;
 $yellow: #fabe50;
+$img-width: 45%;
 
-.header {
-  font-family: Arial, Helvetica, sans-serif;
+%no-decoration {
+  text-decoration: none;
+}
+%u-decoration {
+  text-decoration: underline;
+}
 
-  &__logo {
-    text-align: center;
-  }
+@mixin reset-list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
 
-  &__img {
-    max-width: 350px;
-  }
-  .menu {
-    &__list {
-      display: flex;
-      justify-content: center;
-      border-top: 1px solid $light-grey;
-      border-bottom: 1px solid $light-grey;
-      margin-left: auto;
-      margin-right: auto;
-      width: 80%;
-      padding: 20px 0;
-    }
+@mixin flx($property, $jty-cnt) {
+  display: flex;
+  #{$property}: $jty-cnt;
+}
 
-    &__links {
-      position: relative;
-
-      &:not(:last-child)::after {
-        content: "";
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        right: -3px;
-        margin: auto;
-        height: 15px;
-        width: 1px;
-        background-color: $light-grey;
-      }
-    }
-
-    &__link {
-      padding: 0 25px;
-      color: $dark-grey;
-      text-decoration: none;
-
-      &:hover {
-        color: $purple;
-      }
-    }
+@mixin for-phone-only {
+  @media (max-width: 767.98px) {
+    @content;
   }
 }
 
-.footer {
-  text-align: center;
-  padding: 20px 0;
-  font-family: Arial, Helvetica, sans-serif;
-  position: relative;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
-
-  &__logo {
-    max-width: 100px;
+@mixin for-tablet-only {
+  @media (min-width: 768px) and (max-width: 1199.98px) {
+    @content;
   }
+}
 
-  &__txt {
-    margin: auto;
-    font-size: 14px;
+@mixin for-desktop-only {
+  @media (min-width: 1200px) {
+    @content;
+  }
+}
+
+@function calculateRem($size) {
+  @return calc($size / 16px * 1rem);
+}
+
+@mixin fontSize($size) {
+  font-size: calculateRem($size);
+}
+
+@import "header", "footer", "about", "article", "collection", "contact";
+
+$directions: top, bottom, left, right;
+$layout-margin-size: 10px;
+
+@each $direction in $directions {
+  %no-margin-#{$direction} {
+    margin-#{$direction}: 0;
+  }
+  %default-margin-#{$direction} {
+    margin-#{$direction}: $layout-margin-size;
+  }
+  %double-margin-#{$direction} {
+    margin-#{$direction}: $layout-margin-size * 2;
+  }
+  %half-margin-#{$direction} {
+    margin-#{$direction}: calc($layout-margin-size / 2);
   }
 }
 
@@ -79,6 +76,9 @@ $yellow: #fabe50;
   font-family: Arial, Helvetica, sans-serif;
 
   &__content {
+    @include for-phone-only {
+      width: 100%;
+    }
     width: 70%;
     padding: 40px 8px;
   }
@@ -92,7 +92,7 @@ $yellow: #fabe50;
 
   &__title {
     text-decoration: none;
-    font-size: 22px;
+    @include fontSize(22px);
     color: $dark-grey;
     letter-spacing: 1.5;
     &:hover {
@@ -104,12 +104,14 @@ $yellow: #fabe50;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 10px;
-    margin-bottom: 20px;
+    @extend %default-margin-top, %double-margin-bottom;
   }
 
   &__date {
-    margin: 0 10px;
+    @extend %no-margin-top,
+      %no-margin-bottom,
+      %default-margin-left,
+      %default-margin-right;
     font-size: 12px;
     font-style: italic;
   }
@@ -119,7 +121,10 @@ $yellow: #fabe50;
     padding: 5px 7px;
     color: $purple;
     border: 1px solid $purple;
-    margin: 0 10px;
+    @extend %no-margin-top,
+      %no-margin-bottom,
+      %default-margin-left,
+      %default-margin-right;
   }
 
   &__details {
@@ -127,7 +132,7 @@ $yellow: #fabe50;
   }
 
   &__img {
-    width: 100px;
+    width: 100%;
   }
 
   &__description {
@@ -182,8 +187,61 @@ $yellow: #fabe50;
     color: $dark-grey;
     margin-top: 10px;
     margin-bottom: 10px;
+
     &:hover {
       color: $purple;
+    }
+  }
+
+  &__sidebar {
+    width: 25%;
+    padding: 40px 10px;
+  }
+
+  .sidebar {
+    &__top {
+      border: 1px solid $light-grey;
+      padding: 15px 20px;
+    }
+    &__title {
+      background-color: $yellow;
+      text-align: center;
+      padding: 10px 20px;
+      margin: 0;
+      letter-spacing: 1.5px;
+    }
+    &__posts {
+      @include reset-list;
+    }
+    &__list {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      align-items: center;
+      padding: 15px 0;
+      &:not(:last-child) {
+        border-bottom: 1px dashed $light-grey;
+      }
+    }
+    &__img {
+      width: 40%;
+    }
+    &__details {
+      width: 50%;
+      padding-left: 10px;
+    }
+    &__post-title {
+      font-size: 14px;
+      color: $purple;
+      @extend %no-decoration;
+
+      &:hover {
+        @extend %u-decoration;
+      }
+    }
+    &__post-date {
+      font-size: 12px;
+      margin: 5px 0 0 0;
     }
   }
 }
