--- a/Projects/sieweb/src/app/components/login/login.component.css
+++ b/Projects/sieweb/src/app/components/login/login.component.css
@@ -1,19 +1,26 @@
 :host {
-    display: flex;
-    justify-content: center;
-    margin: 100px 0px;
-  }
+  display: flex;
+  justify-content: center;
+  margin: 100px 0px;
+}
 
 .mat-form-field {
-    width: 100%;
-    min-width: 300px;
-  }
+  width: 100%;
+  min-width: 300px;
+}
 
-
-mat-card-title, mat-card-content {
-    display: flex;
-    justify-content: center;
+mat-card-title,
+mat-card-content {
+  display: flex;
+  justify-content: center;
 }
 
 .button {
-  }
+}
+
+.error {
+  padding: 16px;
+  width: 300px;
+  color: white;
+  background-color: red;
+}
