--- a/Projects/sieweb/src/app/components/nav/nav.component.html
+++ b/Projects/sieweb/src/app/components/nav/nav.component.html
@@ -22,7 +22,9 @@
               <a><i class="material-icons">checklist</i> Matricula</a>
             </mat-expansion-panel-header>
             <a mat-list-item>Realizar Matrícula</a>
-            <a mat-list-item>Histórico Comum</a>
+            <a mat-list-item routerLink="/matricula/historico-comum"
+              >Histórico Comum</a
+            >
             <a mat-list-item>Solicitar Form. Transpal</a>
           </mat-expansion-panel></a
         >
