--- a/Projects/sieweb/src/app/components/profile/edit-profile/edit-profile.component.html
+++ b/Projects/sieweb/src/app/components/profile/edit-profile/edit-profile.component.html
@@ -86,3 +86,10 @@
     </mat-form-field>
   </form>
 </mat-card>
+
+<mat-card class="mat-elevation-z3">
+  <div class="submit">
+    <button class="btn" type="submit" mat-button>Atualizar Dados</button>
+    <button class="btn" type="submit" mat-button>Cancelar</button>
+  </div>
+</mat-card>
