--- a/Projects/sieweb/src/app/components/nav/nav.component.css
+++ b/Projects/sieweb/src/app/components/nav/nav.component.css
@@ -5,7 +5,8 @@
   left: 0;
 }
 
-.sidenav a {
+.sidenav a,
+span {
   color: #fff;
 }
 .sidenav a:hover {
@@ -34,4 +35,8 @@
 
 .mat-expansion-indicator::after {
   color: #fff !important;
+}
+
+.selected {
+  background-color: #303f9f !important;
 }
