--- a/Projects/sieweb/src/app/components/profile/edit-profile/edit-profile.component.css
+++ b/Projects/sieweb/src/app/components/profile/edit-profile/edit-profile.component.css
@@ -11,3 +11,14 @@ button {
 .mat-card {
   margin-bottom: 10px;
 }
+
+.submit {
+  display: flex;
+  justify-content: center;
+}
+
+.btn {
+  background-color: #3f51b5;
+  color: #fff;
+  margin: 15px;
+}
