--- a/Udemy - React - The Complete Guide/secao8/project1/src/components/Dialog/DialogError.css
+++ b/Udemy - React - The Complete Guide/secao8/project1/src/components/Dialog/DialogError.css
@@ -1,3 +1,13 @@
+.container-backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 10;
+  background: rgba(0, 0, 0, 0.75);
+}
+
 .container-dialog {
   position: fixed;
   top: 30vh;
