--- a/Projects/my-expenses/src/components/Card/CardBalance/CardBalance.module.scss
+++ b/Projects/my-expenses/src/components/Card/CardBalance/CardBalance.module.scss
@@ -5,4 +5,12 @@
   border: 1px solid black;
   border-radius: 5px;
   padding: 1rem;
+
+  &__content {
+    margin-top: 2rem;
+    &__items {
+      display: flex;
+      flex-direction: column;
+    }
+  }
 }
