--- a/Projects/my-expenses/src/components/Sidebar/Sidebar.module.scss
+++ b/Projects/my-expenses/src/components/Sidebar/Sidebar.module.scss
@@ -1,7 +1,11 @@
 .sidebar {
   background-color: #090909;
-  display: inline-block;
   position: relative;
-  width: 250px;
+  width: 20%;
   height: 100vh;
+  float: left;
+  border-collapse: collapse;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
