Learning grid layout

--- a/Alura/Flex e grid/exercitando/grid-without-grid-area.css
+++ b/Alura/Flex e grid/exercitando/grid-without-grid-area.css
@@ -6,12 +6,13 @@
 
 .corpo {
   background-color: #444444;
-  padding: 8px;
+  padding: 16px;
   width: 100vw;
   height: 100vh;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr 1fr;
+  gap: 16px;
 }
 
 .cabecalho {
@@ -19,8 +20,8 @@
   border-radius: 10px;
   min-width: 50px;
   min-height: 50px;
-  margin: 8px;
   grid-column: span 4;
+  grid-row: 4;
 }
 
 .lateral {
@@ -28,8 +29,8 @@
   border-radius: 10px;
   min-width: 50px;
   min-height: 50px;
-  margin: 8px;
   grid-row: span 3;
+  grid-column: 4;
 }
 
 .meio {
@@ -37,8 +38,7 @@
   border-radius: 10px;
   min-width: 50px;
   min-height: 50px;
-  margin: 8px;
-  grid-column: span 2;
+  grid-column: 2 / 3;
   grid-row: span 3;
 }
 
@@ -47,7 +47,8 @@
   border-radius: 10px;
   min-width: 50px;
   min-height: 50px;
-  margin: 8px;
+  grid-row: 3;
+  grid-column: 1;
 }
 
 .direita-baixo {
@@ -55,6 +56,6 @@
   border-radius: 10px;
   min-width: 50px;
   min-height: 50px;
-  margin: 8px;
   grid-row: span 2;
+  grid-column: 1;
 }
