--- a/Alura/Flex e grid/exercitando/grid-without-grid-area.css
+++ b/Alura/Flex e grid/exercitando/grid-without-grid-area.css
@@ -20,7 +20,9 @@
   border-radius: 10px;
   min-width: 50px;
   min-height: 50px;
-  grid-column: span 4;
+  /* grid-column: span 4;
+  grid-row: 4; */
+  grid-column: 1 /5;
   grid-row: 4;
 }
 
@@ -29,7 +31,10 @@
   border-radius: 10px;
   min-width: 50px;
   min-height: 50px;
-  grid-row: span 3;
+  /* grid-row: span 3;
+  grid-column: 4;
+ */
+  grid-row: 1/4;
   grid-column: 4;
 }
 
@@ -38,8 +43,10 @@
   border-radius: 10px;
   min-width: 50px;
   min-height: 50px;
-  grid-column: 2 / 3;
-  grid-row: span 3;
+  /* grid-column: 2 / 3;
+  grid-row: span 3; */
+  grid-column: 2/4;
+  grid-row: 1/4;
 }
 
 .direita-cima {
@@ -56,6 +63,6 @@
   border-radius: 10px;
   min-width: 50px;
   min-height: 50px;
-  grid-row: span 2;
+  grid-row: 1/3;
   grid-column: 1;
 }
