--- a/Projects/my-expenses/src/App.module.scss
+++ b/Projects/my-expenses/src/App.module.scss
@@ -1,14 +1,11 @@
 .container {
-  width: 100%;
-  height: 100%;
+  display: grid;
+  grid-template-columns: 1fr 5fr;
+}
 
-  &__content {
-    margin-left: 5rem;
-    margin-top: 5rem;
-    margin-right: 5rem;
-    height: 100%;
-    width: 70%;
-    float: right;
-    border-collapse: collapse;
-  }
+.container__content {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  margin: 2rem 3rem;
 }
