Create component to personal wallet

--- a/Projects/my-expenses/src/App.module.scss
+++ b/Projects/my-expenses/src/App.module.scss
@@ -5,7 +5,8 @@
 
 .container__content {
   display: grid;
-  grid-template-columns: 1fr 2fr;
+  grid-template-columns: 1fr;
   grid-template-rows: 1fr 1fr 1fr;
   margin: 2rem 3rem;
+  gap: 2rem;
 }
