--- a/Projects/my-expenses/src/components/Balance/Balance.module.scss
+++ b/Projects/my-expenses/src/components/Balance/Balance.module.scss
@@ -2,16 +2,44 @@
   display: flex;
   height: 100%;
   flex-direction: column;
-  // justify-content: space-between;
   &__header {
     display: flex;
-    align-items: center;
-    justify-content: space-between;
+    justify-content: flex-start;
+    flex-direction: column;
+    gap: 1rem;
+
     h2 {
       font-size: 1.25rem;
       font-weight: 500;
       padding: 0;
       margin: 0;
+    }
+
+    &__title {
+      display: flex;
+      width: 100%;
+      justify-content: space-between;
+    }
+
+    &__search {
+      display: flex;
+      align-items: center;
+      border: 1px solid white;
+      border-radius: 5px;
+      padding: 0.2rem;
+      padding-left: 0.8rem;
+
+      input {
+        background-color: #090909;
+        border: none;
+        border-radius: 5px;
+        color: white;
+        padding: 0.2rem;
+      }
+
+      input:focus {
+        outline: none;
+      }
     }
 
     &__conversion {
