--- a/Projects/my-expenses/src/components/Card/Card.module.scss
+++ b/Projects/my-expenses/src/components/Card/Card.module.scss
@@ -1,8 +1,8 @@
 .card {
-  // display: inline-block;
   background-color: #090909;
   color: white;
   border: 1px solid black;
   border-radius: 15px;
   padding: 1rem;
+  max-height: 65vh;
 }
