--- a/Projects/my-expenses/src/App.module.scss
+++ b/Projects/my-expenses/src/App.module.scss
@@ -6,7 +6,7 @@
 .container__content {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
   margin: 2rem 3rem;
   gap: 2rem;
 }
