--- a/Projects/my-expenses/src/components/Balance/Balance.module.scss
+++ b/Projects/my-expenses/src/components/Balance/Balance.module.scss
@@ -21,27 +21,6 @@
       justify-content: space-between;
     }
 
-    &__search {
-      display: flex;
-      align-items: center;
-      border: 1px solid white;
-      border-radius: 5px;
-      padding: 0.2rem;
-      padding-left: 0.8rem;
-
-      input {
-        background-color: #090909;
-        border: none;
-        border-radius: 5px;
-        color: white;
-        padding: 0.2rem;
-      }
-
-      input:focus {
-        outline: none;
-      }
-    }
-
     &__conversion {
       button {
         background-color: white;
@@ -63,13 +42,14 @@
   }
 
   &__content {
-    cursor: pointer;
+    overflow: auto;
     h3 {
       margin: 0;
     }
     display: flex;
     flex-direction: row;
-    margin: 2rem;
+    justify-content: center;
+    margin-top: 2rem;
     box-sizing: border-box;
     flex-wrap: wrap;
     gap: 1rem;
