--- a/Projects/my-expenses/src/components/Transaction/Transaction.module.scss
+++ b/Projects/my-expenses/src/components/Transaction/Transaction.module.scss
@@ -8,9 +8,15 @@
   }
 
   &__header {
-    &__dropdown {
-      display: "inline-flex";
-      justify-content: "flex-start";
+    h3 {
+      font-size: 1.25rem;
+      font-weight: 500;
+      padding: 0;
+      margin: 0;
+    }
+
+    &__table {
+      overflow: auto;
     }
   }
 }
