--- a/Projects/my-expenses/src/components/Dialog/DialogOverlay/DialogOverlay.module.scss
+++ b/Projects/my-expenses/src/components/Dialog/DialogOverlay/DialogOverlay.module.scss
@@ -8,8 +8,6 @@
   overflow: hidden;
   background: #fff;
   border-radius: 4px;
-  box-shadow: rgba(0, 0, 0, 0.2) 0px 11px 15px -7px,
-    rgba(0, 0, 0, 0.14) 0px 24px 38px 3px, rgba(0, 0, 0, 0.12) 0px 9px 46px 8px;
 
   &__header {
     display: flex;
@@ -51,13 +49,13 @@
     color: #fff;
     padding: 10px;
     overflow-y: auto;
-    max-height: 30vh;
+    max-height: 50vh;
   }
 
   &__footer {
     background-color: rgb(18, 18, 18);
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     padding: 15px;
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
