--- a/Projects/my-expenses/src/components/Dialog/DialogWallet/DialogWallet.module.scss
+++ b/Projects/my-expenses/src/components/Dialog/DialogWallet/DialogWallet.module.scss
@@ -34,10 +34,6 @@ $color-4: #e74c3c;
       display: inline-block;
     }
 
-    &__color {
-      background-color: $color-1;
-    }
-
     input[type="radio"] {
       display: none;
 
@@ -54,7 +50,7 @@ $color-4: #e74c3c;
           vertical-align: middle;
           cursor: pointer;
           border-radius: 50%;
-          border: 2px solid #ffffff;
+          border: 2px solid #090909;
           box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.33);
           background-repeat: no-repeat;
           background-position: center;
@@ -67,6 +63,10 @@ $color-4: #e74c3c;
             width: 50%;
           }
         }
+      }
+
+      &#color-1 + label span {
+        background-color: $color-1;
       }
 
       &#color-2 + label span {
