Add state from WalletData

--- a/Projects/my-expenses/src/components/Dialog/DialogWallet/DialogWallet.module.scss
+++ b/Projects/my-expenses/src/components/Dialog/DialogWallet/DialogWallet.module.scss
@@ -1,8 +1,4 @@
-// Colors
-$color-1: #2ecc71;
-$color-2: #3498db;
-$color-3: #f1c40f;
-$color-4: #e74c3c;
+@import "../../../variables";
 
 .content {
   display: flex;
