--- a/Projects/my-expenses/src/components/Card/CardBox/Card.module.scss
+++ b/Projects/my-expenses/src/components/Card/CardBox/Card.module.scss
@@ -6,6 +6,10 @@
   padding: 1rem;
   display: flex;
   flex-direction: column;
+  max-width: 150px;
+  width: 150px;
+  height: 130px;
+  max-height: 130px;
   cursor: pointer;
 
   h3 {
