Edit wallet created

--- a/Projects/my-expenses/src/components/Input/InputText/InputText.module.scss
+++ b/Projects/my-expenses/src/components/Input/InputText/InputText.module.scss
@@ -5,3 +5,12 @@
   color: white;
   padding: 0.6rem;
 }
+
+.inputTextId {
+  background-color: #090909;
+  border: none;
+  border-radius: 5px;
+  color: white;
+  padding: 0.6rem;
+  opacity: 0.5;
+}
