edit and delete wallet and quick start add transactions and add balance

--- a/Projects/my-expenses/src/_variables.scss
+++ b/Projects/my-expenses/src/_variables.scss
@@ -1,5 +1,6 @@
 // Colors
-$color-1: #2ecc71;
+$color-1: #05c091;
 $color-2: #3498db;
-$color-3: #f1c40f;
-$color-4: #e74c3c;
+$color-3: #ff8a45;
+$color-4: #ff6e76;
+$color-5: #8d48e3;
