--- a/Projects/my-expenses/src/components/Card/CardBox/CardBox.module.scss
+++ b/Projects/my-expenses/src/components/Card/CardBox/CardBox.module.scss
@@ -13,7 +13,7 @@
   max-height: 130px;
 
   &__content {
-    margin-bottom: 1.5rem;
+    margin-bottom: 1.9rem;
     h3 {
       font-size: 1.2rem;
       font-weight: 600;
@@ -36,6 +36,7 @@
     font-weight: 600;
     a {
       cursor: pointer;
+      font-size: 15px;
     }
   }
 }
