--- a/Projects/my-expenses/src/components/Dialog/DialogWallet/DialogWallet.module.scss
+++ b/Projects/my-expenses/src/components/Dialog/DialogWallet/DialogWallet.module.scss
@@ -77,8 +77,12 @@
         background-color: $color-4;
       }
 
+      &#color-5 + label span {
+        background-color: $color-5;
+      }
+
       &:checked + label span img {
-        opacity: 1;
+        opacity: 10;
       }
     }
   }
