--- a/Projects/my-expenses/src/components/Wallet/Wallet.module.scss
+++ b/Projects/my-expenses/src/components/Wallet/Wallet.module.scss
@@ -31,7 +31,7 @@
         cursor: pointer;
       }
 
-      button .selectd {
+      button .selected {
         background-color: #141414;
       }
 
