--- a/Alura/react-ts/aluroni/src/pages/Menu/Menu.module.scss
+++ b/Alura/react-ts/aluroni/src/pages/Menu/Menu.module.scss
@@ -40,7 +40,7 @@
 }
 
 .cardapio {
-  padding: 50px $padding-horizontal;
+  // padding: 50px $padding-horizontal;
   @media (max-width: $desktop_xsm) {
     padding: 50px $padding-horizontal-mobile;
   }
@@ -54,5 +54,13 @@
     color: $dark;
     font-size: 3rem;
     margin-bottom: 30px;
+  }
+  &__filtros {
+    align-items: center;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-bottom: 30px;
+    width: 100%;
   }
 }
