--- a/Alura/react-ts/aluroni/src/pages/Menu/Menu.module.scss
+++ b/Alura/react-ts/aluroni/src/pages/Menu/Menu.module.scss
@@ -40,7 +40,7 @@
 }
 
 .cardapio {
-  // padding: 50px $padding-horizontal;
+  padding: 50px $padding-horizontal;
   @media (max-width: $desktop_xsm) {
     padding: 50px $padding-horizontal-mobile;
   }
