--- a/origamid/typescript/slider-story/src/style.css
+++ b/origamid/typescript/slider-story/src/style.css
@@ -1,6 +1,11 @@
 body {
   font-family: "Nunito", sans-serif;
   margin: 20px;
+  background: #121212;
+}
+
+body > h1 {
+  color: white;
 }
 
 body.paused {
@@ -15,6 +20,27 @@ img,
 video {
   display: block;
   max-width: 100%;
+}
+
+#story {
+  display: flex;
+  gap: 10px;
+}
+
+#story-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #009688;
+  color: #fff;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+}
+
+#story-list > span {
+  text-align: center;
 }
 
 #slide {
