WIP: separate stories by user

--- a/origamid/typescript/slider-story/src/style.css
+++ b/origamid/typescript/slider-story/src/style.css
@@ -39,6 +39,10 @@ video {
   cursor: pointer;
 }
 
+#story-item:first-child {
+  border: 1px solid #00796b;
+}
+
 #story-list > span {
   text-align: center;
 }
