--- a/Projects/point-system/front/src/components/Sidebar/Sidebar.module.scss
+++ b/Projects/point-system/front/src/components/Sidebar/Sidebar.module.scss
@@ -89,6 +89,10 @@
       display: flex;
       flex-direction: column;
       gap: 5px;
+
+      span:last-child {
+        color: #7a7a7a;
+      }
     }
   }
 }
