--- a/Projects/point-system/front/src/pages/home/Home.module.scss
+++ b/Projects/point-system/front/src/pages/home/Home.module.scss
@@ -1,4 +1,16 @@
-.container {
+main {
+  width: 100%;
   display: grid;
   grid-template-columns: 250px 1fr 1fr 1fr;
+  grid-template-areas: "sidebar content content content";
+  .container {
+    grid-area: content;
+    margin: 30px;
+
+    &__list__cards {
+      display: flex;
+      gap: 15px;
+      margin-bottom: 100px;
+    }
+  }
 }
