--- a/Projects/point-system/front/src/components/Sidebar/Sidebar.module.scss
+++ b/Projects/point-system/front/src/components/Sidebar/Sidebar.module.scss
@@ -18,6 +18,7 @@
   height: 100%;
   background-color: #3d3d3d;
   color: #e0e0e0;
+  grid-area: sidebar;
 
   &__menu {
     padding: 16px;
@@ -59,9 +60,6 @@
 
     &:hover::before {
       @include pointer;
-    }
-
-    &:last-child {
     }
   }
 
