--- a/Projects/point-system/front/src/shared/components/Table/THead/THead.module.scss
+++ b/Projects/point-system/front/src/shared/components/Table/THead/THead.module.scss
@@ -10,5 +10,7 @@
     justify-content: space-between;
     width: 100%;
     margin-bottom: 4px;
+    border-bottom: 2px solid #4f4f4f;
+    padding-bottom: 3px;
   }
 }
