fix: text color in table

--- a/Projects/point-system/front/src/shared/components/Table/THead/THead.module.scss
+++ b/Projects/point-system/front/src/shared/components/Table/THead/THead.module.scss
@@ -1,6 +1,5 @@
 .thead {
   font-family: "Open Sans", sans-serif;
-  color: white;
   font-size: 1rem;
   display: flex;
   justify-content: space-between;
@@ -12,5 +11,6 @@
     margin-bottom: 4px;
     border-bottom: 2px solid #4f4f4f;
     padding-bottom: 3px;
+    font-weight: 500;
   }
 }
