--- a/Projects/point-system/front/src/shared/components/Sidenav/Sidenav.module.scss
+++ b/Projects/point-system/front/src/shared/components/Sidenav/Sidenav.module.scss
@@ -1,5 +1,10 @@
 .sidenav__container {
   display: grid;
+  height: 90vh;
   grid-template-columns: 250px 1fr;
-  grid-template-areas: "sidebar content ";
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-areas:
+    "sidebar content"
+    "sidebar content"
+    "sidebar content";
 }
