feat: add new module and routes

--- a/Projects/point-system/front/src/shared/styles/_styles.scss
+++ b/Projects/point-system/front/src/shared/styles/_styles.scss
@@ -6,9 +6,15 @@
     .container {
       display: flex;
       flex-direction: column;
-      justify-content: space-between;
+      // justify-content: space-between;
       height: 100%;
       margin: 30px;
+    }
+
+    @media (min-width: 1368px) {
+      .container {
+        margin: 30px 10vw;
+      }
     }
   }
 }
