--- a/Projects/point-system/front/src/components/Sidebar/Sidebar.module.scss
+++ b/Projects/point-system/front/src/components/Sidebar/Sidebar.module.scss
@@ -52,11 +52,19 @@
 
   li {
     padding-bottom: 18px;
-    cursor: pointer;
+
     display: flex;
     align-items: center;
     justify-content: flex-start;
     gap: 8px;
+
+    & > a {
+      cursor: pointer;
+      color: inherit;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
 
     &:hover::before {
       @include pointer;
