--- a/Projects/point-system/front/src/index.css
+++ b/Projects/point-system/front/src/index.css
@@ -1,7 +1,10 @@
 #snackbar__root {
-  position: fixed;
+  /* position: fixed;
   top: 7vh;
   left: 77%;
   width: 80%;
-  z-index: 100;
+  z-index: 100; */
+  display: flex;
+  width: 100%;
+  justify-content: flex-end;
 }
