--- a/Projects/point-system/front/src/shared/components/Snackbar/Snackbar.module.scss
+++ b/Projects/point-system/front/src/shared/components/Snackbar/Snackbar.module.scss
@@ -2,8 +2,9 @@
   display: flex;
   padding: 15px;
   text-align: center;
-  max-width: 300px;
-  min-width: 150px;
+  // max-width: 300px;
+  // min-width: 150px;
+  width: 300px;
   align-items: center;
   justify-content: space-between;
   border-radius: 3px;
