--- a/Projects/point-system/front/src/shared/components/Snackbar/Snackbar.module.scss
+++ b/Projects/point-system/front/src/shared/components/Snackbar/Snackbar.module.scss
@@ -9,6 +9,7 @@
   justify-content: space-between;
   border-radius: 3px;
   box-shadow: 0px 17px 10px -10px rgba(0, 0, 0, 0.5);
+  font-weight: 500;
 
   & > span {
     font-family: "Roboto", sans-serif;
